--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       <input type="text">
       <button type="submit" class="btn">Submit</button>
     </form>
+    <div id="result"></div>
   </body>
 </html>
