add comments to js for clarity and minimal styling

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <h1>I'm gonna encrypt you!</h1>
-    <form id="encryptor">
-      <input type="text">
+    <form class="form-group" id="encryptor">
+      <label for="input">Input your message:</label>
+      <textarea class="form-control" rows="5" id="input"></textarea>
       <button type="submit" class="btn">Submit</button>
     </form>
     <div id="result"></div>
